--- a/Styles.css
+++ b/Styles.css
@@ -122,7 +122,7 @@ transition: 5s;
 #About{
 	width: 100vw;
 	height: 100vh;
-	background-color: black;
+	background-color: #000015;
 	align-self: center;
 	
 }
