--- a/Structure/Styles.css
+++ b/Structure/Styles.css
@@ -13,7 +13,8 @@ body{
 	padding: 0;
 	width: 100%;
 	height: 100%;
-	background-color: #000015;
+	background-color: #c2eaba;
+	/*background-image: linear-gradient(to bottom, #0A143F, transparent);*/
 	overflow: scroll;
 	cursor: url("cursor_brush.png"), auto;
     overflow-x: hidden;
@@ -33,7 +34,7 @@ h1{
 	margin: 0px;
 	padding-bottom: 5px;
 	width: 100%;
-	
+	border-bottom: #606463 solid 2px;
 	align-content: center;
 	justify-content: center;
 	display: flex;
@@ -70,37 +71,51 @@ nav{
 }
 
 
-.link{  align-self: top;
-	width: 100%;
-    text-decoration: none;
-	color:white;
-	margin:0;
-	padding: 0;
-	font-size: 40px;
-	font-family: 'Merienda', cursive;
-    z-index: 1;
-	-webkit-background-clip: text;
-    background-image:linear-gradient(to right,white,#861657,#aa4465,#aa5864,#b76e77,#c6858d,white);
-    -webkit-text-fill-color: transparent;
-    text-align: center;
-    text-shadow: -5px 0px 1px white;
+.link {
+  align-self: top;
+  width: 45%;
+  text-decoration: none;
+  font-size: 40px;
+  font-family: 'Merienda', cursive;
+  z-index: 1;
+
+  -webkit-background-clip: text;
+  background-image: linear-gradient(to right, white, #861657, #aa4465, #aa5864, #b76e77, #c6858d, white);
+  -webkit-text-fill-color: transparent;
+  text-align: center;
+  animation: linkpan 25s infinite linear;
 }
 
+@keyframes linkpan {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 158px 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+
 #cont1{
-	width: 33.33%;
-	background-image: linear-gradient(to top, #28282B, transparent);
+	width: 25%;
+	background-color: #3bb78f;
+background-image: linear-gradient(315deg, #3bb78f 0%, #0bab64 74%);
     height: 100%;
-    display: flex;
+	display: flex;
+   
     margin:0;
 	padding: 0;
-	z-index: ;
+    
 	justify-content: center;
 	flex-wrap: wrap;
-	
 }   
 #cont2{
-	width: 33.33%;
-	background-image: linear-gradient(to top, #28282B, transparent);
+	width: 25%;
+	background-color: #3bb78f;
+background-image: linear-gradient(315deg, #3bb78f 0%, #0bab64 74%);
     height: 100%;
 
 	display: flex;
@@ -113,8 +128,9 @@ nav{
 	
 }
 #cont3{
-	width: 33.33%;
-	background-image: linear-gradient(to top, #28282B, transparent);
+	width: 25%;
+	background-color: #3bb78f;
+background-image: linear-gradient(315deg, #3bb78f 0%, #0bab64 74%);
     height: 100%;
 	display: flex;
    
@@ -125,6 +141,19 @@ nav{
 	flex-wrap: wrap;
 
 }
+#cont4{
+	width: 25%;
+	background-color: #3bb78f;
+background-image: linear-gradient(315deg, #3bb78f 0%, #0bab64 74%);
+    height: 100%;
+	display: flex;
+   
+    margin:0;
+	padding: 0;
+    
+	justify-content: center;
+	flex-wrap: wrap;	
+}
 .window{ 	
 width: 75%;
 align-self: center;
@@ -132,49 +161,23 @@ transition-delay: 5s;
 }
 
 
-#bubble1{
-	background-image: linear-gradient(to right,#52F4E0,#81F0E2,#94F0E4);
-	width: 4vw;
-	height: 4vw;
-	border-radius: 50%;
+/*bubble1{
+background-color: #3bb78f;
+background-image: linear-gradient(315deg, #3bb78f 0%, #0bab64 74%);
+	width: 35vw;
+	height: 33.3vw;
+	
 	position: relative;
-	left: 40%;
-	top: 60%;
-	animation: bubble 120s ease-out infinite;
+	left: 35%;
+	top: 94%;
+	animation: bubble 1000s ease-out infinite;
     z-index: -1;
-    filter: blur(20px);
+    filter: blur(4px);
 
 }
 @keyframes bubble{
-	0%{
-		left: 50%;
-		top: 50%;
-		
-	}
-	20%{
-		left: -50%;
-		top: 60%;
-
-	}
-	40%{
-		left: 50%;
-		top: 80%;
-
-	}
-	60%{
-		left: -50%;
-		top: 100%;
-	}
-	80%{
-		left: 50%;
-		top: 150;
-
-	}
-	100%{
-		left: -100%;
-		top: 210%;
-	}
-}
+	
+} */
 
 .hidden{
 	opacity: 0;
@@ -195,54 +198,40 @@ transition-delay: 5s;
 	filter: blur(0px);
     
 }
-#bubble2{
-	background-image: linear-gradient(to right,#7b4397,#dc2430);
-	width: 8vw;
-	height: 8vw;
-	border-radius: 50%;
+/* #bubble2{
+	background-color: #3bb78f;
+background-image: linear-gradient(315deg, #3bb78f 0%, #0bab64 74%);
+	width: 35vw;
+	height: 33.3vw;
+	
 	position: absolute;
     z-index: -1;
-    filter: blur(30px);
-    animation: secondbub 70s infinite linear;
-    
+    filter: blur(4px);
+    animation: secondbub 800s infinite linear;
+    top: 28%;
+    left: 0%;
 }
 @keyframes secondbub{
-	0%{
-		bottom: 100%;
-		left: 0%;
-	}
-	25%{
-		filter: blur(20px);
-		bottom: 75%;
-		left: 25%;
-	}
-	50%{ 
-		width: 10vw;
-		height: 10vw;
-		filter: blur(15px);
-        left: 50%;
-        bottom: 50%;
-	}
-	75%{
-		width: 9vw;
-		height: 9vw;
-		filter: blur(25px);
-		bottom: 25%%;
-		left: 75%;
-
-	}
-	100%{
-		width: 8vw;
-        height: 8vw;
-        left: 100%;
-        bottom: 0%;
-        filter: blur(30px);
-	}
-}
+	
+}*/
+/* #bubble3{
+	background-color: #3bb78f;
+background-image: linear-gradient(315deg, #3bb78f 0%, #0bab64 74%);
+	width: 35vw;
+	height: 33.3vw;
+	
+	position: absolute;
+    z-index: -1;
+     filter: blur(4px); 
+    
+    left: 34%;
+    top: 28%;
+}*/
 #About{
 	width: 100vw;
 	height: 100vh;
-	background-image: linear-gradient(to bottom,#28282B,transparent,#000015);
+background-color: #55EFC4;
+	background-image: linear-gradient(to top, #0A143F, transparent);
 	align-self: center;
 	display: flex;
 	align-content: center;
@@ -267,15 +256,16 @@ body::-webkit-scrollbar-thumb {
 #ctn-abt{
 	scroll-snap-align: start;
 	align-self: center;
-	background-image: linear-gradient(to right, #92fe9d,#00c9ff,#00c9ff, #92fe9d);
+	background-color: black;
 	width: 90vw;
 	height: 90vh;
+	
 	animation: bgpan 12s infinite linear;
 	background-size: 200% 100%;
 	justify-content: center;
 	display: flex;
 	flex-wrap: wrap;
-	
+	scroll-behavior: auto;
 	overflow: auto;
 	scroll-snap-type: y mandatory;
 }
@@ -290,10 +280,22 @@ body::-webkit-scrollbar-thumb {
     	background-position: 0 0;
     }
 }
+#ctn-abt::-webkit-scrollbar{
+	width: 5px;
+}
+#ctn-abt::-webkit-scrollbar-track {
+  background: slategray;
+  box-shadow: inset 0 0 5px black;
+}
+#ctn-abt::-webkit-scrollbar-thumb {
+  background: darkgray;
+  border-radius: 5px;
+  border: 3px black;
+}
 #abt{
     height: 80%;
     width: 100%;
-    background-color: #000015;
+    background-color: #c2eaba;
     align-self: center;
     color: white;
     margin: 20px;
@@ -305,12 +307,13 @@ body::-webkit-scrollbar-thumb {
 	margin-top: 5%;
 	margin-left: 7.5%;
 	font-family: 'Merienda', cursive;
+	color: #606463;
 
 }
 #projects{
 	width: 100%;
     height: 80%;
-	background-color: #000015;
+	background-color: #c2eaba;
     align-self: center;
     color: white; 
     margin: 20px;
