--- a/Structure/Styles.css
+++ b/Structure/Styles.css
@@ -27,14 +27,17 @@ header{
 	height: 100vh;
     scroll-snap-align: start;
     z-index: 1;
-
-
+    background-image: url("building background.jpeg");
+    background-repeat: no-repeat;
+    background-size: 100% 55%;
+    background-position: top center;
 }
 h1{	
+
 	margin: 0px;
 	padding-bottom: 5px;
 	width: 100%;
-	border-bottom: #606463 solid 2px;
+	
 	align-content: center;
 	justify-content: center;
 	display: flex;
@@ -44,17 +47,20 @@ h1{
    -webkit-user-drag: none;
    -webkit-user-select: none;
    -ms-user-select: none;
-   height: 30%;
+   height: 50%;
    z-index: 1;
+   position: relative;
+   
 
 }
 nav{
-	height: 70%;
+	height: 50%;
 	width: 100%;
 	display: flex;
 	margin:0;
 	padding: 0;
 	z-index: 1;
+	border-top: black groove 10px;
 }
 
 #logo{
@@ -68,8 +74,24 @@ nav{
 	padding: 0;
 	position: absolute;
 	z-index: 1;
+	top: 2%;
 }
+#houseicon{
+	user-drag: none;  
+   user-select: none;
+   -moz-user-select: none;
+   -webkit-user-drag: none;
+   -webkit-user-select: none;
+   -ms-user-select: none;
+	position: absolute;
+	margin:0;
+	padding: 0;
+	z-index: -1;
+	left: 50%;
+	top: -2%;
 
+
+}
 
 .link {
   align-self: top;
@@ -78,12 +100,13 @@ nav{
   font-size: 40px;
   font-family: 'Merienda', cursive;
   z-index: 1;
-
+  height: 15%;
   -webkit-background-clip: text;
   background-image: linear-gradient(to right, white, #861657, #aa4465, #aa5864, #b76e77, #c6858d, white);
   -webkit-text-fill-color: transparent;
   text-align: center;
   animation: linkpan 25s infinite linear;
+  padding-right: 10px;
 }
 
 @keyframes linkpan {
@@ -102,10 +125,10 @@ nav{
 #cont1{
 	width: 25%;
 	background-color: #3bb78f;
-background-image: linear-gradient(315deg, #3bb78f 0%, #0bab64 74%);
+background-image: linear-gradient(to bottom, #3bb78f 0%, #0bab64 74%);
     height: 100%;
 	display: flex;
-   
+    position: relative;
     margin:0;
 	padding: 0;
     
@@ -115,9 +138,9 @@ background-image: linear-gradient(315deg, #3bb78f 0%, #0bab64 74%);
 #cont2{
 	width: 25%;
 	background-color: #3bb78f;
-background-image: linear-gradient(315deg, #3bb78f 0%, #0bab64 74%);
+background-image: linear-gradient(to bottom, #3bb78f 0%, #0bab64 74%);
     height: 100%;
-
+    position: relative;
 	display: flex;
    
     margin:0;
@@ -130,10 +153,10 @@ background-image: linear-gradient(315deg, #3bb78f 0%, #0bab64 74%);
 #cont3{
 	width: 25%;
 	background-color: #3bb78f;
-background-image: linear-gradient(315deg, #3bb78f 0%, #0bab64 74%);
+background-image: linear-gradient(to bottom, #3bb78f 0%, #0bab64 74%);
     height: 100%;
 	display: flex;
-   
+   position: relative;
     margin:0;
 	padding: 0;
     
@@ -144,10 +167,10 @@ background-image: linear-gradient(315deg, #3bb78f 0%, #0bab64 74%);
 #cont4{
 	width: 25%;
 	background-color: #3bb78f;
-background-image: linear-gradient(315deg, #3bb78f 0%, #0bab64 74%);
+background-image: linear-gradient(to bottom, #3bb78f 0%, #0bab64 74%);
     height: 100%;
 	display: flex;
-   
+   position: relative;
     margin:0;
 	padding: 0;
     
@@ -155,11 +178,27 @@ background-image: linear-gradient(315deg, #3bb78f 0%, #0bab64 74%);
 	flex-wrap: wrap;	
 }
 .window{ 	
-width: 75%;
+width: 80%;
 align-self: center;
 transition-delay: 5s;
+margin: 0;
+padding: 0;
 }
-
+.hidden_top{
+	position: relative;
+	top: -10%;
+	transition: 1s ease-out;
+	opacity: 0.1;
+	filter: blur(10px);
+	z-index: -1;
+}
+.slide_bottom{
+	top: 0%;
+	opacity: 1;
+	filter: blur(0);
+	z-index: 1;
+	position: relative;
+}
 
 /*bubble1{
 background-color: #3bb78f;
@@ -230,8 +269,8 @@ background-image: linear-gradient(315deg, #3bb78f 0%, #0bab64 74%);
 #About{
 	width: 100vw;
 	height: 100vh;
-background-color: #55EFC4;
-	background-image: linear-gradient(to top, #0A143F, transparent);
+	background-color: #3bb78f;
+background-image: linear-gradient(to top, #3bb78f 0%, #0bab64 74%);
 	align-self: center;
 	display: flex;
 	align-content: center;
@@ -256,11 +295,12 @@ body::-webkit-scrollbar-thumb {
 #ctn-abt{
 	scroll-snap-align: start;
 	align-self: center;
-	background-color: black;
+	
 	width: 90vw;
 	height: 90vh;
-	
-	animation: bgpan 12s infinite linear;
+	background-color: #4d4855;
+background-image: linear-gradient(to bottom, #4d4855 0%, #000000 74%, #4d4855);
+    animation: bgpan 12s infinite linear;
 	background-size: 200% 100%;
 	justify-content: center;
 	display: flex;
@@ -273,11 +313,9 @@ body::-webkit-scrollbar-thumb {
 	0%{
 		background-position: 0 0;
       }
-    50%{
-    	background-position: -100% 0;
-    }
     100%{
-    	background-position: 0 0;
+    	background-position: 0 90vh;
+
     }
 }
 #ctn-abt::-webkit-scrollbar{
@@ -293,7 +331,7 @@ body::-webkit-scrollbar-thumb {
   border: 3px black;
 }
 #abt{
-    height: 80%;
+    height: 81vh;
     width: 100%;
     background-color: #c2eaba;
     align-self: center;
@@ -312,7 +350,7 @@ body::-webkit-scrollbar-thumb {
 }
 #projects{
 	width: 100%;
-    height: 80%;
+    height: 81vh;
 	background-color: #c2eaba;
     align-self: center;
     color: white; 
