--- a/Structure/Styles.css
+++ b/Structure/Styles.css
@@ -13,7 +13,7 @@ body{
 	padding: 0;
 	width: 100%;
 	height: 100%;
-	background-color: #c2eaba;
+	background-color: #EEC0C6;
 	/*background-image: linear-gradient(to bottom, #0A143F, transparent);*/
 	overflow: scroll;
 	cursor: url("cursor_brush.png"), auto;
@@ -100,13 +100,14 @@ nav{
   font-size: 40px;
   font-family: 'Merienda', cursive;
   z-index: 1;
-  height: 15%;
+  height: 18.5%;
   -webkit-background-clip: text;
-  background-image: linear-gradient(to right, white, #861657, #aa4465, #aa5864, #b76e77, #c6858d, white);
+  background-image: linear-gradient(to right, #EEC0C6, #861657, #aa4465, #aa5864, #b76e77, #c6858d, #EEC0C6);
   -webkit-text-fill-color: transparent;
   text-align: center;
   animation: linkpan 25s infinite linear;
   padding-right: 10px;
+  margin: 0px;
 }
 
 @keyframes linkpan {
@@ -124,8 +125,8 @@ nav{
 
 #cont1{
 	width: 25%;
-	background-color: #3bb78f;
-background-image: linear-gradient(to bottom, #3bb78f 0%, #0bab64 74%);
+	background-color: whitesmoke;
+
     height: 100%;
 	display: flex;
     position: relative;
@@ -137,8 +138,8 @@ background-image: linear-gradient(to bottom, #3bb78f 0%, #0bab64 74%);
 }   
 #cont2{
 	width: 25%;
-	background-color: #3bb78f;
-background-image: linear-gradient(to bottom, #3bb78f 0%, #0bab64 74%);
+	background-color: whitesmoke;
+
     height: 100%;
     position: relative;
 	display: flex;
@@ -152,8 +153,8 @@ background-image: linear-gradient(to bottom, #3bb78f 0%, #0bab64 74%);
 }
 #cont3{
 	width: 25%;
-	background-color: #3bb78f;
-background-image: linear-gradient(to bottom, #3bb78f 0%, #0bab64 74%);
+	background-color: whitesmoke;
+
     height: 100%;
 	display: flex;
    position: relative;
@@ -166,8 +167,8 @@ background-image: linear-gradient(to bottom, #3bb78f 0%, #0bab64 74%);
 }
 #cont4{
 	width: 25%;
-	background-color: #3bb78f;
-background-image: linear-gradient(to bottom, #3bb78f 0%, #0bab64 74%);
+	background-color: whitesmoke;
+
     height: 100%;
 	display: flex;
    position: relative;
@@ -183,6 +184,8 @@ align-self: center;
 transition-delay: 5s;
 margin: 0;
 padding: 0;
+position: relative;
+top: -10%;
 }
 .hidden_top{
 	position: relative;
@@ -269,8 +272,8 @@ background-image: linear-gradient(315deg, #3bb78f 0%, #0bab64 74%);
 #About{
 	width: 100vw;
 	height: 100vh;
-	background-color: #3bb78f;
-background-image: linear-gradient(to top, #3bb78f 0%, #0bab64 74%);
+	background-color: whitesmoke;
+
 	align-self: center;
 	display: flex;
 	align-content: center;
