--- a/Styles.css
+++ b/Styles.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Merienda:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Foldit&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Rubik+Wet+Paint&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Foldit:wght@200;400&display=swap');
 html{
  height:100%;
  width: 100%;
@@ -31,7 +33,7 @@ header{
     background-repeat: no-repeat;
     background-size: 100% 52%;
     background-position: top center;
-    border: solid gray 10px;
+    border: inset gray 10px;
     border-top: 0px;
     box-sizing: border-box;
 }
@@ -63,7 +65,7 @@ nav{
 	margin:0;
 	padding: 0;
 	z-index: 1;
-	border-top:gray solid 10px;
+	border-top:gray groove 10px;
 }
 
 #logo{
@@ -79,29 +81,14 @@ nav{
 	z-index: 1;
 	top: 2%;
 }
-#houseicon{
-	user-drag: none;  
-   user-select: none;
-   -moz-user-select: none;
-   -webkit-user-drag: none;
-   -webkit-user-select: none;
-   -ms-user-select: none;
-	position: absolute;
-	margin:0;
-	padding: 0;
-	z-index: -1;
-	left: 50%;
-	top: -2%;
 
-
-}
 
 .link {
   align-self: top;
   width: 45%;
   text-decoration: none;
   font-size: 40px;
-  font-family: 'Merienda', cursive;
+  font-family: 'Foldit', cursive;
   z-index: 1;
   height: 19%;
   -webkit-background-clip: text;
@@ -145,15 +132,15 @@ background-image: Radial-gradient(circle, #0cbaba, #380036 74%);
   left: 0;
   top: 0;
   border-radius: 10%;
-  border-left: 5px solid black;
-  border-top: 5px solid black;
+  border-left: 5px ridge black;
+  border-top: 5px ridge black;
  }
  .cont:hover::after {
   right: 0;
   bottom: 0;
    border-radius: 10%;
-  border-right: 5px solid black;
-  border-bottom: 5px solid black;
+  border-right: 5px ridge black;
+  border-bottom: 5px ridge black;
  }
 #cont1{
 	width: 25%;
@@ -234,7 +221,41 @@ top: -10%;
 	z-index: 1;
 	position: relative;
 }
+.hidden{
+	opacity: ;
+	
+	filter:blur(0px);
+	position: relative;
+	
+}
+.hidden_rep{
+	opacity: 0;
+	transition: all 1s linear;
+	filter:blur(2px);
+	position: relative;
+	
+}
+.hidden_right{
+	position: relative;
+	right: 5%;
+	transition: 0.6s ease-out;
+	opacity: 0.1;
+	filter: blur(10px);
+	z-index: -1;
+}
+.slide_left{
+	position: relative;
+	right: 0%;
+	opacity: 1;
+	filter: blur(0px);
 
+}
+
+.show{
+	opacity: 1;
+	filter: blur(0px);
+    
+}
 /*bubble1{
 background-color: #3bb78f;
 background-image: linear-gradient(315deg, #3bb78f 0%, #0bab64 74%);
@@ -253,25 +274,7 @@ background-image: linear-gradient(315deg, #3bb78f 0%, #0bab64 74%);
 	
 } */
 
-.hidden{
-	opacity: 0;
-	transition: all 1s ease-in;
-	filter:blur(2px);
-	position: relative;
-	
-}
-.hidden_rep{
-	opacity: 0;
-	transition: all 1s linear;
-	filter:blur(2px);
-	position: relative;
-	
-}
-.show{
-	opacity: 1;
-	filter: blur(0px);
-    
-}
+
 /* #bubble2{
 	background-color: #3bb78f;
 background-image: linear-gradient(315deg, #3bb78f 0%, #0bab64 74%);
@@ -311,7 +314,7 @@ background-image: linear-gradient(315deg, #3bb78f 0%, #0bab64 74%);
 	align-content: center;
 	
 	z-index: -1;
-	border: solid gray 10px;
+	border: inset gray 10px;
 	box-sizing: border-box;
 	text-align: left;
 
@@ -326,7 +329,7 @@ background-image: linear-gradient(315deg, #3bb78f 0%, #0bab64 74%);
 	align-content: center;
 	
 	z-index: -1;
-	border: solid gray 10px;
+	border: inset gray 10px;
 	box-sizing: border-box;
 	text-align: left;
 }
@@ -396,11 +399,16 @@ background-image: linear-gradient(to bottom, #4d4855 0%, #000000 74%, #4d4855);
 .h2sec{
 	margin-top: 5%;
 	margin-left: 10%;
-	font-family: 'Merienda', cursive;
-	color: #606463;
+		font-family: 'Foldit', cursive;
+	color: black;
   justify-self: right ;	
+  font-size: 50px;
 }
 
+#vision{
+	font-family: 'Foldit', cursive;
+
+}
 /* #projects{
 	width: 100%;
     height: 81vh;
