--- a/Styles.css
+++ b/Styles.css
@@ -280,10 +280,9 @@ top: -10%;
 	height: 100vh;
 	/*background-color: #fffafa; */
   scroll-snap-align: start;
-	align-self: center;
-	display: flex;
-	align-content: center;
-	justify-content: center;
+		display: flex;
+
+	align-items: center;
 	z-index: -1;
 	border: inset gray 10px;
 	box-sizing: border-box;
@@ -297,33 +296,53 @@ top: -10%;
 	/*background-color: #fffafa; */
   scroll-snap-align: start;
 	align-items: center;
-	display: flex;
-	align-content: center;
-	justify-content: center;
+	display: flex;	
 	z-index: -1;
 	border: inset gray 10px;
 	box-sizing: border-box;
 	flex-direction: column;
-	overflow: hidden;
-}
+	overflow: auto;
+	position: relative;
+	scroll-snap-type: y mandatory;
 
+}
+.aboutsec{
+	width: 100vw;
+	height: 100vh;
+	/*background-color: #fffafa; */
+  scroll-snap-align: start;
+	align-items: center;
+	display: flex;	
+	z-index: -1;
+	border: inset gray 10px;
+	box-sizing: border-box;
+	flex-direction: column;
+	overflow: auto;
+	position: relative;
+	scroll-snap-type: y mandatory;
+}
+.slidecont{
+height: 100vh;
+width: 85vw;  
+
+ scroll-snap-align: start;
+}
 
 .h2sec{
 	font-family: 'Foldit', cursive;
 	color: black;
-  width: 18vw;
-  height: 25vh;
-  font-size: 80px;
-  display: flex;
-  margin-top: 5%;
+  font-size: 80px; 
   animation: h2secpan 4s infinite linear;
   -webkit-background-clip: text;
 background-color: #0cbaba;
 background-image: Radial-gradient(circle, #0cbaba, #380036 74%);
 background-size: 100% 100%;
-
-
+box-sizing: border-box;
+height: 12vh;
+margin-top: 1%;
   -webkit-text-fill-color: transparent;
+  text-align: center;
+
 
 }
 @keyframes h2secpan{
@@ -335,32 +354,30 @@ background-size: 100% 100%;
 	}
 }
 
-#aboutus{
-	font-family: 'Poppins', sans-serif;
-	width: 80vw;
-	height: 80vh;
-	position: relative;
- 	display: flex;
-  overflow: hidden;
-  align-items: center;
-  margin-bottom: 1%;
-
-}
-
 .titles{
   text-align: center;
 	font-size: 48px;
-	width: 100%;
-	height: 10%;
-	scroll-snap-align: start;
 	color: #36454F;
-	margin-bottom: 75px; 
+	font-family: 'poppins', cursive;
+	scroll-snap-align: start;
+  height: 19vh;
+	
 }
-.para{
-	width: 100%;
-	height: 75%;
-	font-size: 16px;
+.para{	
+		font-size: 24px;
 	white-space: pre-wrap;
+	font-family: 'poppins', cursive;
+  text-align: center;
+   margin: auto;
+   width: 85%;
+}
+
+.flex_row{
+	display: flex;
+	height: 100vh;
+	flex-direction: row;
+
+	align-items: center;
 }
 .forwardbutton{
 	width: 50px;
@@ -396,7 +413,7 @@ background-size: 100% 100%;
 }
 .slide{
    display: none; 
-   height: 100%;
+   height: 100%;  
    width: 100%;
    transition: all 3s;
    opacity: 0;
@@ -412,11 +429,4 @@ opacity: 1;
 .slide.prev{
 	display: none;
 
-}
-.flex_row{
-	display: flex;
-	height: 100vh;
-	flex-direction: row;
-
-	align-items: center;
 }
