--- a/Styles.css
+++ b/Styles.css
@@ -24,6 +24,7 @@ background-image: linear-gradient(315deg, #d9e4f5 0%, #f5e3e6 74%);
 	cursor: url("cursor_brush.png"), auto;
     overflow-x: hidden;
     z-index: 10;
+    position: absolute;
 }
 
 body::-webkit-scrollbar{
@@ -72,7 +73,7 @@ header{
    z-index: 1;
    position: relative;
 }
-nav{
+#mainnav{
 	height: 48%;
 	width: 100%;
 	display: flex;
@@ -272,6 +273,7 @@ top: -10%;
 .show{
 	opacity: 1;
 	filter: blur(0px);
+
     
 }
 
@@ -350,7 +352,7 @@ margin-top: 1%;
 		background-position: 0 0;
 	}
 	100%{
-		background-position: 240px 0;
+		background-position: 238px 0;
 	}
 }
 
@@ -429,4 +431,14 @@ opacity: 1;
 .slide.prev{
 	display: none;
 
+}
+.circle{
+	height: 24px;
+	width: 24px;
+	border-radius: 24px;
+	background-color: #aa5864;
+	position: absolute;
+	left: 0;
+	top: 0;
+	display: none;
 }
