--- a/Styles.css
+++ b/Styles.css
@@ -481,25 +481,26 @@ opacity: 1;
 	width: 6vw;
 	background-color: slategray;  
 	position: fixed;
-	top:1;
+	top: 0.1;
 	transition: 200ms ease;
   border-right: 5px;
   border-top: 5px;
   border-bottom: 5px;
   border-left: 5px;
-  border-color: gray;
+  border-color: black;
   	border-radius: 2px;
-	border-style: inset;
+	border-style: solid;
 /*	border-top: 10px; 
 	border-bottom: 10px;
 
 	border-left: 0px; */
 	display: inline-block;
 	box-sizing: border-box;
-  left: -4.5%;  opacity: 1;
+  left: -4.6%;  opacity: 1;
   transition: 0.6s;
 /*	padding: 4px; */	
 }
+
 .sidebar:hover{
 	opacity: 1;
 left: 0%;
@@ -522,6 +523,16 @@ left: 0%;
 }
 .hidenav{
 	display: none;
-
 }
- 
+#indicator{
+	position: relative;
+	left: 85%;
+	background-color: black;
+	border-radius: 50%;
+	border: 2px black solid;
+	box-sizing: border-box;
+	width: 2vw;
+	height: 4.5vh;
+	object-fit: cover;
+	object-position: 0% 32%;
+}
